<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HelpScreenActivity">

    <TextView
        android:id="@+id/instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/instructions_title"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/instructions_title"
        android:text="@string/instructions"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/author_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/instruction"
        android:text="@string/author_title"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/author_title"
        android:text="@string/author_info"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/citations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/citations"
        android:layout_alignParentStart="true"
        android:text="@string/citations_title"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/citations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/citations"
        android:textColor="@android:color/white"
        android:background="#000000"
        android:textSize="10sp" />
</RelativeLayout>