<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OptionScreenActivity">

    <TextView
        android:id="@+id/options_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:text="@string/options_lowercase"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/options_lowercase"
        android:layout_marginTop="78dp"
        android:text="@string/board_size"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radio_group_mines"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/number_mines"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_board_size"
        android:layout_width="235dp"
        android:layout_height="130dp"
        android:layout_alignStart="@+id/options_lowercase"
        android:layout_below="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radio_group_mines"
        android:layout_width="297dp"
        android:layout_height="133dp"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/radio_group_board_size" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/reset" />


</RelativeLayout>