<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/main_menu"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView3"
        android:layout_marginStart="55dp"
        android:text="@string/start_game"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="91dp" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="66dp"
        android:text="@string/options"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="139dp" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/options_button"
        android:layout_below="@+id/game_button"
        android:text="@string/help"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="187dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/top_secret_file_icon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="58dp"
        app:srcCompat="@drawable/jet" />
</RelativeLayout>